# daoApps

./: .gitignore  .gitmodules  DEPLOYMENT.md  README.md  configure-remote.sh  daoapps.service  deploy-remote.sh  deploy.sh  nginx-final.conf  nginx-simple.conf  nginx.conf  package-lock.json  pyproject.toml  test-mcp-api.py  test-mcp-full.py
.github/workflows/: cd.yml  ci.yml
.trae/: ACTIVE_SPEC
.trae/docs/: api-changelog.md  component-migration-checklist.md  git-versioning-guide.md  performance-baseline.md  regression-test-report.md  vue3-rewrite-handoff.md  vue3-rewrite-report.md
.trae/issues/: BUG-20260410-001-TS编译错误334个.md  CI_error.md  README.md  _template.md
.trae/knowledge/: debugging-experience.md
.trae/retrospectives/: typescript-error-fixing-retrospective-20260411.md
.trae/reviews/: README.md  _template.md  phase0-6-review.md  phase0-7-systematic-review.md  phase10-api-migration-review.md  phase8-9-review.md  task20-status-report.md
.trae/specs/agentpit-api-migration/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-continuation/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-document-update/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-flexloop-taoteching/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-improvements/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-performance-cd/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-platform-development/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-production-readiness/: GIT_COMMIT_PLAN.md  checklist.md  spec.md  tasks.md
.trae/specs/agentpit-vue3-deployment/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-vue3-migration/: checklist.md  spec.md  tasks.md
.trae/specs/agentpit-vue3-rewrite/: checklist.md  spec.md  tasks-phase5-updated.md  tasks.md
.trae/specs/cd-yaml-fix/: checklist.md  spec.md  tasks.md
.trae/specs/cd-yaml-fix-retrospective/: checklist.md  spec.md  tasks.md
.trae/specs/ci-errors-fix/: checklist.md  spec.md  tasks.md
.trae/specs/ci-pipeline-optimization/: checklist.md  spec.md  tasks.md
.trae/specs/commit-6982e2c-merge/: checklist.md  spec.md  tasks.md
.trae/specs/complete-server-deployment/: checklist.md  spec.md  tasks.md
.trae/specs/configure-monorepo-packages/: checklist.md  postmortem-analysis.md  spec.md  tasks.md
.trae/specs/debugging-experience-retrospective/: checklist.md  spec.md  tasks.md
.trae/specs/deepresearch-flexloop-integration/: checklist.md  retrospective.md  spec.md  tasks.md
.trae/specs/deepresearch-mcp-integration-testing/: checklist.md  deepresearch-mcp-integration-test-report.md  spec.md  tasks.md
.trae/specs/deepresearch-mcp-platform-for-flexloop/: checklist.md  spec.md  tasks.md
.trae/specs/deepresearch-user-config-folder/: checklist.md  spec.md  tasks.md
.trae/specs/fix-monetization-api/: checklist.md  spec.md  tasks.md
.trae/specs/git-operations/: spec.md  (+2 more)
.trae/tasks/: Git分支管理与发布流程.md  Vite Vue3 vs Vite React.md  Vue 最新版本是 Vue3 吗.md  Vue3 Pinia Composition API.md  为核心模块组件编写单元测试.md  修复主页显示异常.md  修复并优化用户界面UI.md  分析并修复CD流程中的Lint错误.md  分析并修复图像错误.md  创建 pyproject.toml 文件.md  启动并验证项目运行.md  复盘 Vue3 迁移与部署亮点.md  复盘分析 Commit_ 6982e2cf705ae69d69fdb2e7.md  开发任务优先级列表.md  开发智能体平台系统.md  更新重构AgentPit项目文档.md  测试 CI 流水线.md  项目复盘与后续计划制定.md
apps/AgentPit/: .env.development  .env.production.example  .gitignore  .lighthouserc.json  .prettierrc  Makefile  Podmanfile  README_PODMAN.md  SECURITY_CHECKLIST.md  VALIDATION_CHECKLIST.md  deploy-podman.sh  deploy.ps1  deploy.sh  eslint.config.js  healthcheck.sh  index.html  init-container.sh  package-lock.json  package.json  podman-compose.yml  tailwind.config.ts  test-deployment.sh  ts-errors-final.txt  ts-errors.txt  ts-errors2.txt  ts-final.txt  ts-final2.txt  ts-final3.txt  tsconfig.app.json  vitest.config.ts  vitest.setup.ts
apps/Flexloop/: .dockerignore  .env.development  .env.example  Makefile  README_PODMAN.md  SECURITY_CHECKLIST.md  check_env.sh  deploy-podman.sh  init-container.sh  nginx.conf  package-lock.json  playwright.config.ts  podman-compose.yml  tailwind.config.ts  ts-errors-final.txt  ts-errors.txt  ts-errors2.txt  ts-final.txt  ts-final2.txt  ts-final3.txt  vitest.config.ts  vitest.setup.ts
debugging-experience/: README.md  debugging_data.md  debugging_experience.md  problem_solution_mapping.md  retrieval_test.md
deploy/: daoapps.logrotate  daoapps.service  nginx.conf.template  prometheus.yml
scripts/deployment/: build-app.sh  configure-services.sh  deploy-to-server.sh  prepare-server.sh  rollback.sh  setup-monitoring.sh  verify-deployment.sh
src/services/: config.ts  errors.ts  index.ts
(+833 files in other folders)
